tests/NormalTests/paczka1/fuzzy1/60934245.err
Error in line 2: S603 S273 64,1
Error in line 6: S603 A249 32,6
Error in line 10: 9fiKdN A249 13,2
Error in line 14: mdrNJWK S603 81,0
Error in line 24: 0Tp3Fd A100 -2,47
Error in line 27: S603 A249 91,9
Error in line 22: 9fiKdN A249 16,7
Error in line 19: Ighy3P S603 52,3
Error in line 17: mdrNJWK A249 68,2
Error in line 21: 0Tp3Fd A100 67,4
Error in line 40: mdrNJWK A100 26c4
